# NESen

./: .gitignore  APU.hpp  CMakeLists.txt  CPU.hpp  Makefile  NES.hpp  PPU.hpp  README.md  ROM.hpp  SeNES.cpp  imgui.ini  instr_test_output.txt
ext/SFML/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  SFMLStaticTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
ext/SFML/lib/Debug/: sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d.exp  sfml-network-d.lib  sfml-network-s-d.lib  sfml-system-d.exp  sfml-system-s-d.lib  sfml-window-d.exp  sfml-window-d.lib  sfml-window-s-d.lib
ext/SFML/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters
ext/SFML/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
ext/SFML/src/SFML/Audio/sfml-audio.dir/Debug/: sfml-audio-d-2.dll.recipe  sfml-audio-d-2.ilk
ext/SFML/src/SFML/Audio/sfml-audio.dir/Debug/sfml-audio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-audio.write.1u.tlog
ext/SFML/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  sfml-graphics.vcxproj  sfml-graphics.vcxproj.filters
ext/SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/: sfml-graphics-d-2.dll.recipe
ext/SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/sfml-graphics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-graphics.write.1u.tlog
ext/SFML/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  sfml-main.vcxproj  sfml-main.vcxproj.filters
ext/SFML/src/SFML/Main/sfml-main.dir/Debug/sfml-main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
ext/SFML/src/SFML/Network/: INSTALL.vcxproj  INSTALL.vcxproj.filters  sfml-network.vcxproj  sfml-network.vcxproj.filters
ext/SFML/src/SFML/Network/sfml-network.dir/Debug/: sfml-network-d-2.dll.recipe  sfml-network-d-2.ilk
ext/SFML/src/SFML/Network/sfml-network.dir/Debug/sfml-network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-network.write.1u.tlog
ext/SFML/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  sfml-system.vcxproj  sfml-system.vcxproj.filters
ext/SFML/src/SFML/System/sfml-system.dir/Debug/: sfml-system-d-2.dll.recipe  sfml-system-d-2.ilk
ext/SFML/src/SFML/System/sfml-system.dir/Debug/sfml-system.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-system.write.1u.tlog
ext/SFML/src/SFML/Window/: INSTALL.vcxproj  INSTALL.vcxproj.filters  sfml-window.vcxproj  sfml-window.vcxproj.filters
ext/SFML/src/SFML/Window/sfml-window.dir/Debug/: sfml-window-d-2.dll.recipe  sfml-window-d-2.ilk  sfml-window-s-d.lib.recipe
ext/SFML/src/SFML/Window/sfml-window.dir/Debug/sfml-window.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sfml-window.write.1u.tlog
ext/SFML/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
ext/SFML/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ext/SFML/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
ext/imgui-sfml/: CMakeLists.txt
src/: CPU.cpp  CPU.hpp  CPU.inl  CPUInstr.inl  Cartridge.cpp  Cartridge.hpp  Common.hpp  Log.hpp  NES.hpp  NESen.cpp  PPU.cpp  PPU.hpp
src/core/: APU.hpp  CPU.cpp  CPU.hpp  CPU.inl  CPUInstr.inl  Cartridge.cpp  Cartridge.hpp  Common.cpp  Common.hpp  NES.hpp  PPU.cpp  PPU.hpp
src/tests/: cpu_nestest.cpp  harte_test.cpp  instr_test.cpp
src/tools/: CommandLine.hpp  log.cpp  log.hpp  term.hpp
